--- a/app/src/main/res/layout/full_image.xml
+++ b/app/src/main/res/layout/full_image.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/full_image_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
