--- a/app/src/main/res/layout/photo.xml
+++ b/app/src/main/res/layout/photo.xml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="shavaliev_dinar.studio_colibri.Photo"
-    android:importantForAccessibility="auto"
-    android:nestedScrollingEnabled="false"
-    android:touchscreenBlocksFocus="false">
+    tools:context="shavaliev_dinar.studio_colibri.Photo">
 
     <GridView
         android:id="@+id/gridView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:columnWidth="100dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clickable="true"
-        android:contextClickable="true"
-        android:drawSelectorOnTop="true">
-    </GridView>
-
-
+        android:drawSelectorOnTop="true"
+        android:gravity="center"
+        android:horizontalSpacing="8dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="8dp" />
 </RelativeLayout>
