--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true">
+    android:orientation="vertical">
 
-
-    <CalendarView
-        android:id="@+id/calendarView"
+    <FrameLayout
+        android:id="@+id/calendar_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:selectedWeekBackgroundColor="#ff0000"
-        android:weekNumberColor="#0000ff"
-        android:weekSeparatorLineColor="#00ff00" />
+        android:layout_gravity="center" />
 </LinearLayout>
